flux/apps/immich/immich_ml.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: immich-machine-learning

spec:
  selector:
    matchLabels:
      app: immich-machine-learning

  template:
    metadata:
      labels:
        app: immich-machine-learning

    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning

          ports:
            - name: http
              containerPort: 3301
