flux/apps/immich/immich_server.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: immich-server

spec:
  selector:
    matchLabels:
      app: immich-server

  template:
    metadata:
      labels:
        app: immich-server

    spec:
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: photos
        - name: external-photos
          nfs:
            server: 192.168.1.210
            path: /volume1/Photos
            readOnly: true

      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server

          ports:
            - name: http
              containerPort: 2283

          volumeMounts:
            - name: photos
              mountPath: /usr/src/app/upload
            - name: external-photos
              mountPath: /photos
