flux/apps/immich/immich_worker.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: immich-worker

spec:
  replicas: 0

  selector:
    matchLabels:
      app: immich-worker

  template:
    metadata:
      labels:
        app: immich-worker

    spec:
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: photos
        - name: external-photos
          nfs:
            server: 192.168.1.210
            path: /volume1/Photos
            readOnly: true

      containers:
        - name: immich-worker
          image: ghcr.io/immich-app/immich-server

          volumeMounts:
            - name: photos
              mountPath: /usr/src/app/upload
            - name: external-photos
              mountPath: /photos
