flux/apps/immich/redis.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis

spec:
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis
  
    spec:
      containers:
        - name: redis
          image: ghcr.io/valkey-io/valkey

          ports:
            - name: redis
              containerPort: 6379
