flux/apps/immich/service_immich_ml.yaml
apiVersion: v1
kind: Service

metadata:
  name: immich-machine-learning

spec:
  selector:
    app: immich-machine-learning

  ports:
    - port: 3003
      targetPort: http
