flux/apps/immich/service_immich_server.yaml
apiVersion: v1
kind: Service

metadata:
  name: immich-server

spec:
  selector:
    app: immich-server

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
